# action-issue-sync-pr

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: semantic_release.yml
scripts/pr_issue_sync/: pr_issue_sync.py
